--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,11 @@
              <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
              <p>Suscribete y dale like</p>
             </div>
+            <section>
+                <div id="footer" style="text-align:center;">
+                    <span style="font-size:20px; font-family: 'Courier New', Courier, monospace; color:white;">Hecho con amor para platzi <3</span>
+                </div>
+            </section>
         </div> 
         </body>
     </html>
